--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -108,6 +108,14 @@ img {
 .custom_hov:hover {
   background-color: #95b1d0;
 }
+.custom_tbl_hov {
+  background-color: #ffffff;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.custom_tbl_hov:hover {
+  background-color: #95b1d0;
+}
 
 
 .custom_hov_menu {
